--- a/Day- Ex5 - Airshift/scss/_app.scss
+++ b/Day- Ex5 - Airshift/scss/_app.scss
@@ -1229,8 +1229,7 @@ p {
   }
   // Cart page
   .cart__progress {
-    width: 95%;
-    margin-left: 2.5%;
+    width: 100%;
     &-text {
       width: 98%;
       margin-left: 1%;
